completing the user crud
